--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -692,9 +692,21 @@ $btn-mb: 0.5rem;
   overflow-y: auto;
   width: $sidebar-width;
   z-index: 99;
-  background: var(--sidebar-bg);
+  // background: var(--sidebar-bg);
+  background: url('/assets/img/bg01.jpg') no-repeat center/cover;
   border-right: 1px solid var(--sidebar-border-color);
-
+  &::before {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--sidebar-bg);
+    z-index: -99;
+    opacity: 0.85;
+  }
   /* Hide scrollbar for Chrome, Safari and Opera */
   &::-webkit-scrollbar {
     display: none;
@@ -726,7 +738,7 @@ $btn-mb: 0.5rem;
       transition: transform 0.5s;
 
       &:hover {
-        transform: scale(1.2);
+        transform: scale(1.3);
       }
     }
   }
@@ -791,7 +803,7 @@ $btn-mb: 0.5rem;
 
         i {
           font-size: 95%;
-          opacity: 0.8;
+          opacity: 1;
           margin-right: 1.5rem;
         }
 
