error notion-16.png

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -97,7 +97,7 @@
             <i class="{{ entry.icon }}"></i>
           {% endif %}
           {% if entry.type == 'notion' %}
-            <i><img class="custom-icon notion" src="../assets/img/notion-16.png" /></i>
+            <i><img class="custom-icon notion" src="../../assets/img/notion-16.png" /></i>
           {% endif %}
         </a>
       {% endif %}
