--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -97,7 +97,7 @@
             <i class="{{ entry.icon }}"></i>
           {% endif %}
           {% if entry.type == 'notion' %}
-            <i><img class="custom-icon notion" src="../../assets/img/notion-16.png" /></i>
+            <i><img class="custom-icon notion" width="16" height="16" src="https://img.icons8.com/ios-filled/16/notion.png" alt="notion" /></i>
           {% endif %}
         </a>
       {% endif %}
