--- a/_includes/comments/giscus.html
+++ b/_includes/comments/giscus.html
@@ -3,8 +3,8 @@
   (function () {
     const origin = 'https://giscus.app';
     const iframe = 'iframe.giscus-frame';
-    const lightTheme = 'light';
-    const darkTheme = 'dark_dimmed';
+    const lightTheme = 'light_tritanopia';
+    const darkTheme = 'noborder_dark';
 
     let initTheme = lightTheme;
     const html = document.documentElement;
